parfait/components/tabbar.css
/* ... */
#tabbrowser-tabs[orient="horizontal"] {
  tab-group {
    --tab-group-line-color: light-dark(var(--tab-group-color), var(--tab-group-color-invert)) !important;
    --tab-group-line-thickness: 1px;
    --tab-group-line-toolbar-border-distance: 3px;
  }
  .tab-group-label-hover-highlight {
    --tab-hover-background-color: transparent;
  }
  .tab-group-label {
    background-color: color-mix(in srgb, light-dark(var(--tab-group-color), var(--tab-group-color-invert)), transparent 87%) !important;
    color: light-dark(var(--tab-group-color), var(--tab-group-color-invert)) !important;
    outline: none !important;
    transition: all var(--pf-ts-15) !important;
    --tab-border-radius: var(--pf-border-radius-hl);
    --tab-group-label-padding: 10px;
    --tab-group-label-height: calc(var(--tab-min-height) - var(--pf-navbar-padding-block));

    &:hover {
      background-color: color-mix(in srgb, light-dark(var(--tab-group-color), var(--tab-group-color-invert)), transparent 80%) !important;
    }
  }
  .tab-group-line {
    --dragover-tab-group-color: var(--tab-group-line-color);
  }
  tab-split-view-wrapper .tab-group-line {
    inset-block-end: calc((var(--tab-block-margin) / 2) * -1) !important;
  }
}
.tab-group-overflow-count-container {
  display: none !important;
}

/* tabs: notes */
#tabbrowser-tabs:is([orient="horizontal"], [expanded]) .tabbrowser-tab[tab-note]:not([pinned]) .tab-note-icon-overlay {
  display: revert !important;
}
.tab-note-icon { display: none; }

